# bsiconsbot

./: .pre-commit-config.yaml  .pylintrc  .travis.yml  README.md  README.rst  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
.toolforge/: cronjobs.yaml
.toolforge/jobs/: bsicons-replacer.sh  bsicons-reporter.sh
bsiconsbot/: page.py  textlib.py
bsiconsbotscripts/: replacer.py
scripts/: replacer.py  reporter.py
src/bsiconsbot/: __init__.py  options_classes.py  page.py  textlib.py
src/bsiconsbot/cli/: __init__.py  replacer.py  reporter.py
src/bsiconsbotscripts/: replacer.py  reporter.py
