[build-system]
requires = ["poetry_core>=1.0.8"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py37"]
line-length = 79  # default: 88


[tool.isort]
py_version = 37
add_imports = ["from __future__ import annotations"]
atomic = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true


[tool.mypy]
python_version = 3.7
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "jsoncfg.*",
    "mwparserfromhell.*",
    "pywikibot.*",
]
ignore_missing_imports = true


[tool.poetry]
authors = ["JJMC89"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
]
description = "BSicons bot"
keywords = ["bot", "bsicon", "mediawiki"]
license = "MIT"
name = "bsiconsbot"
packages = [
    { include = "bsiconsbot", from = "src" },
    { include = "bsiconsbotscripts", from = "src" },
]
readme = "README.md"
repository = "https://github.com/jjmc89-bot/bsiconsbot"
version = "0.4.0"

[tool.poetry.dependencies]
python = "^3.7"
json-cfg = "0.4.2"
mwparserfromhell = "0.6.4"
pywikibot = {version = "7.4.0", extras = ["mysql", "mwoauth"]}
pywikibot-extensions = "22.6.28"
typing-extensions = "4.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.19.0"
pylint = "2.13.9"

[tool.poetry.scripts]
bsicons-reporter = "bsiconsbotscripts.reporter:main"
bsicons-replacer = "bsiconsbotscripts.replacer:main"


[tool.pylint]

[tool.pylint.master]
# Use multiple processes to speed up Pylint.
jobs = 0  # default: 1

[tool.pylint.basic]
# Good variable names which should always be accepted
good-names = "e,i,j,k,_"  # default: i,j,k,ex,Run,_

[tool.pylint.format]
max-line-length = 79  # default: 100

[tool.pylint.reports]
reports = "yes"

[tool.pylint.similarities]
min-similarity-lines = 7
