[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
authors = [
    { name = "JJMC89" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
]
dependencies = [
    "json-cfg == 0.4.2",
    "mwparserfromhell == 0.7.2",
    "pywikibot [mysql, mwoauth] == 10.4.0",
    "pywikibot-extensions == 24.9.21",
]
description = "BSicons bot"
keywords = [ "bot", "bsicon", "mediawiki" ]
license = "MIT"
name = "bsiconsbot"
readme = "README.md"
requires-python = ">=3.13"
version = "25.1.5"

[project.scripts]
bsicons-reporter = "bsiconsbot.cli.reporter:main"
bsicons-replacer = "bsiconsbot.cli.replacer:main"

[project.urls]
source = "https://github.com/jjmc89-bot/bsiconsbot"


[tool.black]
target-version = ["py313"]
line-length = 79  # default: 88


[tool.isort]
add_imports = ["from __future__ import annotations"]
atomic = true
lines_after_imports = 2
profile = "black"
py_version = 313


[tool.mypy]
python_version = 3.13
enable_error_code = [
    "ignore-without-code",
]
strict = true
disallow_subclassing_any = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "jsoncfg.*",
    "pywikibot.*",
]
ignore_missing_imports = true


[tool.poetry]

[tool.poetry.dependencies]
python = "^3.13"
